[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "segment_depth"
version = "0.0.1"
description = "repo to distill sam into smaller models for segmenting depth data in moseq experimens"
authors = [
  { name = "jack lovell" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["segment_depth"]
include = ["pyproject.toml", "segment_depth/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["segment_depth"]
force-sort-within-sections = true

